# agent-samples

./: README.md  Tiltfile
.github/workflows/: check.yml  publish.yml  push.yml
adk/python/agentic-layer-sdk/: pyproject.toml
adk/python/agentic-layer-sdk/agenticlayer/: a2a_starlette.py  otel.py
adk/python/delegate-agent/: .env.example  Dockerfile  Makefile  README.md  main.py  pyproject.toml
adk/python/delegate-agent/delegate/: agent.py
adk/python/weather-agent/: .env.example  Dockerfile  Makefile  README.md  main.py  pyproject.toml
adk/python/weather-agent/weather/: agent.py
adk/wiremock/mock-agent/: Dockerfile
adk/wiremock/mock-agent/mappings/: agent-card.json
agents/news-host-agent/: .env  Makefile  README.md  pyproject.toml
agents/summarizer-agent/: README.md
deploy/demo-workloads/: kustomization.yaml
deploy/demo-workloads/news-host-agent/: deployment.yaml  service.yaml
mcp-servers/: Makefile  README.md
mcp-servers/src/: weather.py
wiremock/mock-agent/: Dockerfile  Makefile  README.md
wiremock/mock-agent/mappings/: a2a-message.json  agent-card.json  health.json
