[project]
name = "agentic-layer-sdk"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "google-adk[a2a]",
    "litellm",
    "opentelemetry-exporter-otlp-proto-http",
    "opentelemetry-instrumentation-starlette",
    "openinference-instrumentation-google-adk",
    "opentelemetry-instrumentation-httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agenticlayer"]
