[project]
name = "weather-agent"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "agentic-layer-sdk",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["weather"]

[tool.uv.sources]
agentic-layer-sdk = { path = "../agentic-layer-sdk", editable = true }
